--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -447,12 +447,12 @@ LLM_PROVIDER_CONFIGS = {
         # a dedicated log analyzer agent service!
         # Read more: https://timesketch.org/developers/log-analyzer-agent/
         # Did you install `pip3 install sec-gemini` in your Timesketch containers?
-        "secgemini_log_analyzer_agent": {
-            "logs_processor_api_url": "",
-            "api_key": "",
-            "model": "logs_analysis_agent-1.1",
-            "base_url": "",
-            "wss_url": "",
+        'secgemini_log_analyzer_agent': {
+            'logs_processor_api_url': '',
+            'api_key': '',
+            'model': 'logs_analysis_agent-1.1',
+            'base_url': '',
+            'wss_url': '',
             # Configuration for individual agents. This is a dictionary where the
             # key is the agent name and the value is another dictionary with
             # agent-specific configuration parameters.
