Fixes an issue where the Sec-Gemini feature fails to process events using the +0000 UTC offset format (#3693)
* Sec-Gemini timesketch compatibility fix

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -457,11 +457,12 @@ LLM_PROVIDER_CONFIGS = {
             # key is the agent name and the value is another dictionary with
             # agent-specific configuration parameters.
             # Example:
-            # 'agents_config': {
-            #     'logs_analysis_loop_agent': {
-            #         'max_iterations': 10,
+            # "agents_config": {
+            #     "logs_analysis_loop_agent": {
+            #         "max_iterations": 10,
             # }
             "agents_config": {},
+            "enable_logging": False,
         }
     },
     "default": {
