--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flask_sqlalchemy==3.0.3
 flask_wtf==1.2.1
 google-auth==2.32.0
 google_auth_oauthlib==0.4.1
+google-genai
 gunicorn==23.0.0
 numpy==1.26.4
 oauthlib==3.1.0
