Migrate AI integration to unified google-genai SDK (#3695)
* Sec-Gemini timesketch compatibility fix
* Use google-genai library instead of older libs
* Make google-genai a default package

---------

Co-authored-by: Janosch <99879757+jkppr@users.noreply.github.com>

--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -407,23 +407,17 @@ LLM_PROVIDER_CONFIGS = {
     # - ollama:  Self-hosted, open-source.
     #   To use the Ollama provider you need to download and run an Ollama server.
     #   See instructions at: https://ollama.ai/
-    # - vertexai: Google Cloud Vertex AI. Requires Google Cloud Project.
-    #   To use the Vertex AI provider you need to:
-    #   1. Create and export a Service Account Key from the Google Cloud Console.
-    #   2. Set the GOOGLE_APPLICATION_CREDENTIALS environment variable to the full path
-    #      to your service account private key file by adding it to the docker-compose.yml
-    #      under environment:
-    #      GOOGLE_APPLICATION_CREDENTIALS=/usr/local/src/timesketch/<key_file>.json
-    #   3. Install the python libraries: $ pip3 install google-cloud-aiplatform
+    # - google_genai: Google GenAI (supporting both Vertex AI and Gemini API).
+    #   To use the Google GenAI provider you need to:
+    #   1. Configure either 'api_key' (for Gemini API) or 'project_id' (for Vertex AI).
+    #   2. For Vertex AI: Set the GOOGLE_APPLICATION_CREDENTIALS environment variable
+    #      to the full path to your service account private key file.
     # - secgemini_log_analyzer_agent: SecGemini Log Analyzer Agent.
     #   To use the SecGemini Log Analyzer Agent you need to:
     #   1. Obtain an API key from https://secgemini.com/
     #   2. pip3 install sec-gemini
     #   IMPORTANT: Private keys must be kept secret. If you expose your private key it is
     #   recommended to revoke it immediately from the Google Cloud Console.
-    # - aistudio: Google AI Studio (API key).  Get API key from Google AI Studio website.
-    #   To use Google's AI Studio simply obtain an API key from https://aistudio.google.com/
-    #   $ pip3 install google-generativeai
     "nl2q": {
         "vertexai": {
             "model": "gemini-2.0-flash",
@@ -431,9 +425,9 @@ LLM_PROVIDER_CONFIGS = {
         },
     },
     "llm_summarize": {
-        "aistudio": {
+        "vertexai": {
             "model": "gemini-2.0-flash",
-            "api_key": "",
+            "project_id": "",
         },
     },
     "llm_synthesize": {
