--- a/data/timesketch.conf
+++ b/data/timesketch.conf
@@ -430,9 +430,9 @@ LLM_PROVIDER_CONFIGS = {
             "project_id": "",
         },
     },
-    "llm_forensic_report": {
+    "llm_starred_events_report": {
         "aistudio": {
-            "model": "gemini-2.0-flash-001",
+            "model": "",
             "api_key": "",
         },
     },
@@ -483,8 +483,8 @@ EXAMPLES_NL2Q = "/etc/timesketch/nl2q/examples_nl2q"
 PROMPT_LLM_SUMMARIZATION = "/etc/timesketch/llm_summarize/prompt.txt"
 PROMPT_LLM_SYNTHESIZE = "/etc/timesketch/llm_summarize/prompt_llm_synthesize.txt"
 
-# LLM starred events to forensic report configuration
-PROMPT_LLM_FORENSIC_REPORT = "/etc/timesketch/llm_forensic_report/prompt.txt"
+# LLM starred events to report default prompt
+PROMPT_LLM_STARRED_EVENTS_REPORT = "/etc/timesketch/llm_starred_events_report/prompt.txt"
 
 # LLM log_analyzer default prompt
 LLM_LOG_ANALYZER_DEFAULT_PROMPT = (
