Update Pylint to 4.0.4 and fix configuration (#13)
* Update pylint to 4.0.4 and fix detected issues

- Updated pylint dependency to 4.0.4 in test_requirements.txt.
- Removed deprecated `suggestion-mode` from .pylintrc.
- Disabled `too-many-positional-arguments` in .pylintrc.
- Fixed 3 potential unbound variable issues detected by pylint 4.0.4 in `timesketch/api/v1/resources/event.py` and `timesketch/lib/analyzers/yetiindicators.py`.

Co-authored-by: jkppr <99879757+jkppr@users.noreply.github.com>

* Remove accidental pylint output files

Removed `pylint_output.txt` and `pylint_output_fixed.txt` which were accidentally included in the previous commit.

--- a/.pylintrc
+++ b/.pylintrc
@@ -140,9 +140,6 @@ recursive=yes
 # source root.
 source-roots=
 
-# When enabled, pylint would attempt to guess common misconfiguration and emit
-# user-friendly hints instead of false-positive error messages.
-suggestion-mode=yes
 
 # Allow loading of arbitrary C extensions. Extensions are imported into the
 # active Python interpreter and may run arbitrary code.
@@ -486,6 +483,7 @@ disable=assignment-from-none,
         useless-object-inheritance,
         useless-suppression,
         consider-using-f-string,
+        too-many-positional-arguments,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
