--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,11 +39,13 @@ nav:
       - LLM Features: guides/admin/llm-features.md
       - Investigation View: guides/admin/investigation-view-setup.md
       - DFIQ Templates: guides/admin/load-dfiq.md
-      - Performance Monitoring: guides/admin/performance-monitoring.md
+      - Performance Monitoring: guides/admin/performance_monitoring.md
   - Developers:
       - Getting started: developers/getting-started.md
       - Frontend development: developers/frontend-development.md
       - Writing and running tests: developers/testing.md
+      - Development with Tilt: developers/tilt-development.md
+      - Local GitHub Actions (act): developers/local_github_actions_with_act.md
       - Interactive notebook: developers/notebook.md
       - API client:
           - Introduction: developers/api-client.md
@@ -69,8 +71,6 @@ nav:
           - Black Hat & defcon 2025: community/2025-blackhat.md
           - 2021 Summit: community/2021-timesketch-summit.md
   - Blog: https://osdfir.blogspot.com/search/label/timesketch
-  - Black Hat & defcon 2025:
-      - community/2025-blackhat.md
 plugins:
   - redirects:
       redirect_maps:
